# mod-lab06-markov

./: .clang-format  .gitignore  CMakeLists.txt  InputText.txt  README.md  Test1.txt  Test2.txt  Test3.txt  Text.txt  Text1.txt  Text2.txt  Text3.txt  Text4.txt  Text5.txt  forTesting.txt  input.txt  out.txt  output.txt  porosiata.txt  source_text.txt  test1.txt  test2.txt  test3.txt  test3_4.txt  test4.txt  test5.txt
.github/workflows/: cpplint.yml  release.yml
dataset/: freedom.txt  happiness.txt  i_am_free.txt  what_is_autumn.txt
datasets/: checkov.txt  golden_fish.txt  moy_boy.txt  ya_russkiy.txt
include/: include.h  textgen.h
input/: source.txt
result/: freedom.txt  gen.txt  generated.txt  golden_fish.txt  happiness.txt  i_am_free.txt  result.txt  test.txt  test3.txt  what_is_autumn.txt
src/: CMakeLists.txt  Text.txt  chekhov.txt  cpplint  data.txt  gen.txt  in.txt  input.txt  input_text  main  main.cpp  out.txt  output.txt  test.txt  text.txt  textgen.cpp  textgen.h  tst.txt
test/: AllTests.cpp  CMakeLists.txt  data.txt  test-text.txt  test.cpp  test.txt  test1.txt  tests.cpp
